Paris - Delphine & Jules F

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,60 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  
+  <link rel="stylesheet" href="./css/normalize.css">
+  <link rel="stylesheet" href="./css/main.css">
+
 </head>
 <body>
-  Instagram
+  <div class="container">
+  <section class="blue-bg">
+    <div class="main-img">
+      <img src="./images/phones.png" alt="Phone IG">
+    </div><!-- end main img -->
 
-  Capture and Share the World's Moments
+    <div class="main-content">
+      <div class="header">
+        <img src="./images/brand.png" alt="Brand image">
+        <h1>Instagram</h1> 
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+        <div class="btn">
+          
+          <img src="./images/home.png" alt="Bouton image home"
+          ><a href="#" >Login</a>
+        </div>
+      </div><!-- end header -->
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+      <article>
+        <h2>Capture and Share the World's Moments</h2>
 
-  Oh yeah, did we mention it's free?
+        <p>Instagram is a <strong>fast</strong> , beautiful and fun way to share your life with friends and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy.
+        You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+        <p>Oh yeah, did we mention it's free?</p>
+      </article>
 
-  Download on the App Store
-  Get it on Google Play
+      <div class="app-market">
+        <a href="https://itunes.apple.com/app/instagram/id389801252?pt=428156&ct=igweb.signupPage.badge&mt=8&vt=lo"><img src="./images/badge-iphone.png" alt="Image lien app store"> Download on the App Store</a>
+        <a href="https://play.google.com/store/apps/details?id=com.instagram.android&referrer=utm_source%3Dinstagramweb%26utm_campaign%3DsignupPage%26ig_mid%3DXDifxAAEAAGuj2ARgi05VdONgIDY%26utm_content%3Dlo%26utm_medium%3Dbadge"><img src="./images/badge-android.png" alt="Image lien Play store"> Get it on Google Play</a>
+      </div><!-- end app-market -->
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+    </div>/<!-- end main content -->
+  </section>
 
-  &copy; 2014 Instagram
+  <footer>
+    <ul>
+      <li><a href="#">About Us</a></li>
+      <li><a href="#">Support</a></li>
+      <li><a href="#">Blog</a></li>
+      <li><a href="#">Press</a></li>
+      <li><a href="#">API</a></li>
+      <li><a href="#">Jobs</a></li>
+      <li><a href="#">Privacy</a></li>
+      <li><a href="#">Terms</a></li>
+      <li>&copy; 2019 Instagram</li>
+    </ul>
+  </footer>
+</div>
 </body>
 </html>
