Paris Raja & Thomas

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,52 @@
 <!DOCTYPE html>
+
 <html lang="en">
-<head>
-  <title>Instagram</title>
-</head>
-<body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="./css/main.css" />
+    <title>Instagram</title>
+  </head>
+  <body>
+    <section>
+      <img src="./images/phones.png" alt="" />
+      <div class="container">
+        <header>
+          <img src="./images/brand.png" alt="" />
+          <button class="logIn">
+            <img src="./images/home.png" alt="" />
+            <a class="logInText" href="#0">Log in</a>
+          </button>
+        </header>
+        <div class="text">
+          <h1>Capture and Share the World's Moments</h1>
+          <p>
+            Instagram is a fast, beautiful and fun way to share your life with
+            friends and family. Take a picture or video, choose a filter to
+            transform its look and feel, then post to Instagram &mdash; it's
+            that easy. You can even share to Facebook, Twitter, Tumblr and more.
+            It's a new way to see the world. Oh yeah, did we mention it's free?
+          </p>
+        </div>
+        <div class="bottomImages">
+          <button class="badgeIphone">
+            <img src="./images/badge-iphone.png" alt="" />
+          </button>
+          <button class="badgeAndroid">
+            <img src="./images/badge-android.png" alt="" />
+          </button>
+        </div>
+      </div>
+    </section>
+    <footer>
+      <nav>
+        <a href="#0">About Us</a> <a href="#0">Support</a>
+        <a href="#0">Blog</a> <a href="#0">Press</a> <a href="#0">Press</a>
+        <a href="#0">API</a> <a href="#0">Jobs</a> <a href="#0">Jobs</a>
+        <a href="#0">Privacy</a> <a href="#0">Terms</a>
+        <a href="#0">&copy; 2014 Instagram</a>
+      </nav>
+    </footer>
+  </body>
 </html>
