--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,75 @@
+<!--
+Use n button	
+-->
+
 <!DOCTYPE html>
 <html lang="en">
+<link rel="stylesheet" href="css/main.css">
+
 <head>
-  <title>Instagram</title>
+	<title>Instagram</title>
 </head>
+
 <body>
-  Instagram
+	<div class="container">
+		<section>
+			<img src="./images/phones.png" alt="phones">
+		</section>
 
-  Capture and Share the World's Moments
+		<section>
+			<nav>
+				<img class="logo" src="./images/brand.png" alt="Instagram old logo">
+				<button><img src="./images/home.png" alt="home">Sign-up</button>
+			</nav>
+			<div class="instructions">
+				<h1>Capture and Share the World's Moments</h1>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+				<p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+				<p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's
+					that
+					easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Oh yeah, did we mention it's free?
+				<p>Oh yeah, did we mention it's free?</p>
+			</div>
+			<div class="apps">
+				<img src="./images/badge-iphone.png" alt="apple logo">
+				<img src="./images/badge-android.png" alt="android logo">
+			</div>
+		</section>
 
-  Download on the App Store
-  Get it on Google Play
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+	</div>
+	<footer>
+		<ul>
+			<a href="#0">
+				<li>About Us</li>
+			</a>
+			<a href="#0">
+				<li>Support</li>
+			</a>
+			<a href="#0">
+				<li>Blog</li>
+			</a>
+			<a href="#0">
+				<li>Press</li>
+			</a>
+			<a href="#0">
+				<li>API</li>
+			</a>
+			<a href="#0">
+				<li>Jobs</li>
+			</a>
+			<a href="#0">
+				<li>Privacy</li>
+			</a>
+			<a href="#0">
+				<li>Terms</li>
+			</a>
+		</ul>
+		<p>&copy; 2014 Instagram</p>
+	</footer>
 
-  &copy; 2014 Instagram
 </body>
+
 </html>
