--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Instagram</title>
-</head>
-<body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
-</body>
+  <head>
+    <title>Instagram</title>
+    <link rel="stylesheet" href="css/main.css" />
+  </head>
+  <body>
+    <div class="megaContainer">
+      <div class="Container">
+        <img src="images/phones.png" />
+        <section>
+          <header>
+            <button class="instagram"><img src="images/brand.png" /></button>
+            <button class="login"><img src="images/home.png" />Log in</button>
+          </header>
+          <div class="contenu">
+            <h2>Capture and Share </br> the World's Moments</h2>
+            <p>
+              Instagram is a <strong>fast, beautiful</strong> and
+              <strong>fun </strong>way to share your life with friends and
+              family. </br> </br> Take a picture or video, choose a filter to transform its
+              look and feel, then post to Instagram &mdash; it's that easy. You
+              can even share to Facebook, Twitter, Tumblr and more. It's a new
+              way to see the world. Oh yeah, did we mention it's free?
+            </p>
+          </div>
+          <div class="download">
+            <button img src="images/badge-iphone.png"></button>
+            <button img src="images/badge-android.png"></button>
+          </div>
+        </section>
+      </div>
+      <nav>
+        <ul>
+          <li>About Us</li>
+          <li>Support</li>
+          <li>Blog</li>
+          <li>Press</li>
+          <li>API</li>
+          <li>Jobs</li>
+          <li>Privacy</li>
+          <li>Terms</li>
+          <li>&copy; 2014 Instagram</li>
+        </ul>
+      </nav>
+    </div>
+  </body>
 </html>
