--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -29,15 +29,15 @@
       <article>
         <h2>Capture and Share the World's Moments</h2>
 
-        <p>Instagram is a <strong>fast</strong> , beautiful and fun way to share your life with friends and family.</p>
+        <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong>  and <strong>fun</strong>  way to share your life with friends and family.</p>
         <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy.
         You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
         <p>Oh yeah, did we mention it's free?</p>
       </article>
 
       <div class="app-market">
-        <a href="https://itunes.apple.com/app/instagram/id389801252?pt=428156&ct=igweb.signupPage.badge&mt=8&vt=lo"><img src="./images/badge-iphone.png" alt="Image lien app store"> Download on the App Store</a>
-        <a href="https://play.google.com/store/apps/details?id=com.instagram.android&referrer=utm_source%3Dinstagramweb%26utm_campaign%3DsignupPage%26ig_mid%3DXDifxAAEAAGuj2ARgi05VdONgIDY%26utm_content%3Dlo%26utm_medium%3Dbadge"><img src="./images/badge-android.png" alt="Image lien Play store"> Get it on Google Play</a>
+        <a  href="https://itunes.apple.com/app/instagram/id389801252?pt=428156&ct=igweb.signupPage.badge&mt=8&vt=lo"><img src="./images/badge-iphone.png" alt="Image lien app store"></a>
+        <a href="https://play.google.com/store/apps/details?id=com.instagram.android&referrer=utm_source%3Dinstagramweb%26utm_campaign%3DsignupPage%26ig_mid%3DXDifxAAEAAGuj2ARgi05VdONgIDY%26utm_content%3Dlo%26utm_medium%3Dbadge"><img src="./images/badge-android.png" alt="Image lien Play store"></a>
       </div><!-- end app-market -->
 
     </div>/<!-- end main content -->
