--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>repl.it</title>
+    <link href="style.css" rel="stylesheet" type="text/css" />
+  </head>
+  <body>
+    <!DOCTYPE html>
 <html lang="en">
   <head>
     <title>Instagram</title>
     <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body>
-    <header class="header"></header>
-    <div class="image"></div>
 
-    <section class="background-image">
+    <section class="background-image header-image">
       <div id="container">
         <div class="phones-image">
           <img src="./images/phones.png" alt="phones" />
@@ -21,41 +28,46 @@
             </div>
           </div>
 
-          <article class="text">
-            <div class="content size ">
-              <h2>Capture and Share the World's Moments</h2>
-              <p>
-                Instagram is a <strong>fast</strong>,<strong> beautiful </strong
-                >and <strong>fun</strong> way to share your life<br />
-                with friends and family.<br />
-                <br />
-                Take a picture or video, choose a filter to transform its
-                look<br />
-                and feel, then post to Instagram &mdash; it's that easy. You
-                can<br />
-                even share to Facebook, Twitter, Tumblr and more. It's a<br />
-                new way to see the world.<br />
-                <br />
-                Oh yeah, did we mention it's free?
-              </p>
-            </div>
-            <div class="app-play size">
-              <img src="./images/badge-iphone.png" alt="app-store-logo" />
-              <img src="./images/badge-android.png" alt="google-play-logo" />
-            </div>
-          </article>
+        
+            <div class="content ">
+                <h2>Capture and Share the World's Moments</h2>
+                   <article class="content-container">
+                     <p> Instagram is a <span>fast</span>, <span>beautiful</span> and <span>fun</span> way to share your life with friends and family.</p>
+       
+                     <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+                     <p>Oh yeah, did we mention it's free?</p>
+                  </article>
+              <div class="app-play ">
+                 <div class="googleapp"> <a href="#0">
+                    <img src="./images/badge-iphone.png" alt="app-store-logo"
+                   /></a></div>
+                  <div class="googleapp"><a href="#0">
+                       <img src="./images/badge-android.png" alt="google-play-logo"
+                      /></a></div>
+              </div>
         </div>
       </div>
     </section>
-    <footer>
-      <div class="footer size">
-        <a href="#0">About Us</a> <a href="#0">Support</a>
-        <a href="#0">Blog</a> <a href="#0">Press</a> <a href="#0">API</a>
-        <a href="#0">Jobs</a> <a href="#0">Privacy</a> <a href="#0">Terms</a>
-      </div>
-      <div class="insta"><p>© 2014 Instagram</p></div>
+  
+      <section class="footer-container">
+        <footer class="footer">
+            <ul class="footer-list">
+               <li><a href="#0"> About Us</a></li>
+               <li><a href="#0">Support</a> </li>
+               <li><a href="#0">Blog</a></li>
+               <li><a href="#0">Press</a></li>
+               <li><a href="#0">API</a></li>
+               <li><a href="#0">Jobs</a></li>
+               <li><a href="#0">Privacy</a></li>
+               <li><a href="#0">Terms</a></li>
+               <li class="insta-grey">&copy; 2014 Instagram</li>
+             </ul>
+         </footer>
+      </section>
     </footer>
   </body>
 </html>
 
-Collapse
+    <script src="script.js"></script>
+  </body>
+</html>
