--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,21 +2,37 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="./css/main.css">
+  <link href='https://fonts.googleapis.com/css?family=Alex Brush' rel='stylesheet'>
 </head>
 <body>
-  Instagram
+  <section>
+    <div class="container-1">
+      <img src="./images/brand.png"/>
+      <h1>Instagram</h1>
+    </div>
+  </section>
 
-  Capture and Share the World's Moments
+  <section>
+    <div>
+      <h2>Capture and Share the World's Moments</h2>
+      <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+      <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+      <p>Oh yeah, did we mention it's free?</p>
+      <div>
+        <i>Download on the App Store</i>
+        <i>Get it on Google Play</i>
+      </div>
+    </div>
+  </section>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
+  <footer>
+    <ul>
+      <li></li>
+      
+    </ul>
+  </footer>
+ 
   About Us
   Support
   Blog
