--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Instagram</title>
-</head>
-<body>
-  Instagram
+  <head>
+    <title>Instagram</title>
+    <link href="./css/main.css" rel="stylesheet" type="text/css" />
+  </head>
+  <body>
+    <section >
+      <aside><img src="./images/phones.png" alt="phones" /></aside>
+      <article>
+      <header>
+        <img src="./images/brand.png" alt="Instagram" />
+        <div class="login">
+          <img src="./images/home.png" alt="Log In" /> Log In
+        </div>
+      </header>
+      <div class="intro">
+        <h2>Capture and Share the World's Moments</h2>
 
-  Capture and Share the World's Moments
+        <p>
+          Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and
+          <strong>fun</strong> way to share your life with friends and family.
+        </p>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+        <p>
+          Take a picture or video, choose a filter to transform its look and
+          feel, then post to Instagram &mdash; it's that easy. You can even
+          share to Facebook, Twitter, Tumblr and more. It's a new way to see the
+          world.
+        </p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        <p>Oh yeah, did we mention it's free?</p>
+        <img src="./images/badge-iphone.png" alt="Download on the App Store" />
+        <img src="./images/badge-android.png" alt="Get it on Google Play" />
+      </div>
+    </article>
+    </section>
+    <nav>
+      <a href="#">About Us</a> <a href="#">Support</a> <a href="#">Blog</a>
+      <a href="#">Press</a> <a href="#">API</a> <a href="#">Jobs</a>
+      <a href="#">Privacy</a> <a href="#">Terms</a>
 
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
-</body>
+      &copy; 2014 Instagram
+    </nav>
+  </body>
 </html>
