--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -30,8 +30,8 @@
         </p>
 
         <p>Oh yeah, did we mention it's free?</p>
-        <img src="./images/badge-iphone.png" alt="Download on the App Store" />
-        <img src="./images/badge-android.png" alt="Get it on Google Play" />
+        <a href="#"><img src="./images/badge-iphone.png" alt="Download on the App Store" /></a>
+        <a href="#"><img src="./images/badge-android.png" alt="Get it on Google Play" /></a>
       </div>
     </article>
     </section>
