--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Instagram</title>
+  <title>Instagram 2000</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <section id="background">
+    <div></div>
+  </section>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <section id="iPhone">
+    <img src="images/phones.png" alt="In use iPhone App"/>
+  </section>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <section id="logo-header">
+    <img id="logo" src="images/brand.png" alt="Instagram Logo"/>
+    <button id="home">
+      <img id="home-icon" src="images/home.png" alt="Home Button"/>
+      <h4>Log In</h4>
+    </button>
+  </section>
 
-  Oh yeah, did we mention it's free?
+  <section id="information">
+    <div>
+      <img src="images/frame.png"/>
+    </div>
 
-  Download on the App Store
-  Get it on Google Play
+      <h3>Capture and Share <br>the World's Moments</h3>
+      <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.<br><br>
+      Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+      <br><br>Oh yeah, did we mention it's free?</p>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
 
-  &copy; 2014 Instagram
+
+    <img id="app-store" src="images/badge-iphone.png" alt="iPhone App">
+    <img id="android-store" src="images/badge-android.png" alt="Android App">
+
+
+  </section>  
+
+  <footer id="footer-menu">
+    <div >
+    <ul>
+      <li class="line-up">ABOUT US</li>
+      <li class="line-up">SUPPORT</li>
+      <li class="line-up">BLOG</li>
+      <li class="line-up">PRESS</li>
+      <li class="line-up">API</li>
+      <li class="line-up">JOBS</li>
+      <li class="line-up">PRIVACY</li>
+      <li class="line-up">TERMS</li>
+      <li class="copyright">&copy; 2014 INSTAGRAM</li>
+    </ul>
+  </div>
+</footer>
 </body>
 </html>
