--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,21 +2,41 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
+
 <body>
-  Instagram
+    <section> 
+  <div class="azul"> </div>
+  <div class="phones"> </div>
+   
+  <article>
+  <h1 class="title"></h1>
+  <button type="button">Log in</button>
+   <img class="home" src="./images/home.png">
 
-  Capture and Share the World's Moments
+  <div class="container">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <h3>Capture and Share<br>the World's Moments </h3>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life<br> with friends and family.<br>
 
-  Oh yeah, did we mention it's free?
+  Take a picture or video, choose a filter to transform its look <br>and feel, then post to Instagram &mdash; it's that easy. You can<br> even share to Facebook, Twitter, Tumblr and more. It's a<br> new way to see the world.<br>
 
-  Download on the App Store
-  Get it on Google Play
+  <br>Oh yeah, did we mention it's free?
 
+</div>
+
+<div class="containerimg"> 
+
+<img src="./images/badge-iphone.png" alt="Apple logo">
+<img src="./images/badge-android.png" alt="Android logo">
+
+</div>
+</article>
+</section>
+
+  <footer>
   About Us
   Support
   Blog
@@ -26,6 +46,9 @@
   Privacy
   Terms
 
-  &copy; 2014 Instagram
+
+  ©2014 Instagram
+</footer>
 </body>
+
 </html>
