--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,46 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="../starter-code/css/main.css">
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <section class = "blue-background">
+    <img  class="logo" src = "../starter-code/images/brand.png">
+    <div class= "link-btn">
+      <img src="images/home.png">
+      <a href="#" class= "txt-btn">Log in</a>
+    </div>  
+  </section>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <section>
+    <div class="box">
+        <h3>Capture and Share the World's Moments</h3>
+      <p>Instagram is a fast, beautiful and fun way to share your life with friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. 
+        You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world. Oh yeah, did we mention it's free?</p>
+    </div>
+    <div>
+      <img class="pos-2" src="./images/badge-iphone.png">
+      <img class="pos-3" src="./images/badge-android.png">
+    </div>
+    <div>
+      <img class="pos-4"src="images/phones.png">
+    </div>
+</section>
+  
+<footer>
+    <ul class= "gral-foot">
+      <li><a href="#" class="footer-links">About Us</a></li>
+      <li><a href="#" class="footer-links">Support</a></li>
+      <li><a href="#" class="footer-links">Blog</a></li>
+      <li><a href="#" class="footer-links">Press</a></li>
+      <li><a href="#" class="footer-links">API</a></li>
+      <li><a href="#" class="footer-links">Jobs</a></li>
+      <li><a href="#" class="footer-links">Privacy</a></li>
+      <li><a href="#" class="footer-links">Terms</a></li>
+      <li><a href="#" class= "last-link"> &copy; 2014 Instagram</a></li>
+    </ul>   
+</footer>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
 </body>
 </html>
