--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,57 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="./css/main.css">
 </head>
 <body>
-  Instagram
+<section class="heading">
 
-  Capture and Share the World's Moments
+ <div>  
+    <img src="images/brand.png" id="Instagram" />
+ </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Oh yeah, did we mention it's free?
+    <div class="button-log">
+        <img src="./images/home.png"/>
+        <button><b> Log in</b></button>
+    </div>
 
-  Download on the App Store
-  Get it on Google Play
+ 
+  
+  
+</section>
+<div class="capture">
+    <h2 class="words">Capture and Share the World's Moments</h2>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+   <p class= "words"> Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.<br>
+     
+    Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br>
+  
+    Oh yeah, did we mention it's free?</p>
+  <div>
+    <img src="images/badge-iphone.png" class="icono" alt="For Iphone">
+    <img src="images/badge-android.png" class="icono" alt="For Android">
+  </div>  
+</div>
+<div class="phone">
+  <img src="images/phones.png">
+</div>
 
-  &copy; 2014 Instagram
+<section class="bottom"> 
+    <footer>
+        <b id="lost">About Us
+        Support
+        Blog
+        Press
+        API
+        Jobs
+        Privacy
+        Terms</b>
+      
+        <b id="last">&copy; 2014 Instagram</b>
+    </footer>
+</section>  
+
 </body>
 </html>
