--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,70 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <section class="general-container">
+    <div class="background">
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+      <div class="content">
+        <div class="phone-container">
+          <img src="../starter-code/images/phones.png" class="image-phones" alt="phones">
+        </div>
 
-  Oh yeah, did we mention it's free?
+        <article class="article-container">
 
-  Download on the App Store
-  Get it on Google Play
+          <div class="logo-and-button">
+          <img src="../starter-code/images/brand.png" class="instagram-logo" alt="instagram-logo">
+          <div class="home-and-button">
+            <button class="button">Log In</button>
+            <img src="../starter-code/images/home.png" alt="home" class="home">
+          </div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+          </div>
 
-  &copy; 2014 Instagram
+          <div class="text-container-block">
+
+              <h2 class="text-container-h2  ">Capture and Share <br> the World's Moments</h2>
+              <p class="text-container-description">Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family. <br>
+                  Take a picture or video, choose a filter to transform its look <br> and feel, then post to Instagram– it's that easy. You can <br> even share to Facebook, Twitter, Tumblr and more. It's a <br> new way to see the world. <br> <br> 
+                  Oh yeah, did we mention it's free?
+              </p> 
+
+              <div class="download-images">
+                <img src="../starter-code/images/badge-iphone.png" alt="appStore">
+                <img src="../starter-code/images/badge-android.png" alt="playStore">
+              </div>
+          </div>
+
+        </article>
+
+
+
+      </div>
+
+      
+    </div>
+
+    <footer class="footer"> 
+      <a href="">About us</a>
+      <a href="">Support</a>
+      <a href="">Blog</a>
+      <a href="">Press</a>
+      <a href="">API</a>
+      <a href="">Jobs</a>
+      <a href="">Privacy</a>
+      <a href="">Terms</a>
+        &copy; 2014 Instagram
+
+
+    </footer>
+
+
+  </section>
+
+
 </body>
 </html>
