--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -6,41 +6,52 @@
   <link href='https://fonts.googleapis.com/css?family=Alex Brush' rel='stylesheet'>
 </head>
 <body>
-  <section>
+  <section class="container-1-m">
     <div class="container-1">
-      <img src="./images/brand.png"/>
-      <h1>Instagram</h1>
+      <img class="imagen-brand" src="./images/brand.png"/>
+      <div class="container-button">
+        <button class="boton"><img src="./images/home.png"/>Log in</button>
+      </div>
+
+      
     </div>
   </section>
 
-  <section>
-    <div>
-      <h2>Capture and Share the World's Moments</h2>
-      <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
-      <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
-      <p>Oh yeah, did we mention it's free?</p>
+  <section class="container-info-m">
+    <div class="container-info-s">
+      <div class="container-info">
+        <h2>Capture and Share the World's Moments</h2>
+        <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+        <p>Oh yeah, did we mention it's free?</p>
+      </div>
       <div>
-        <i>Download on the App Store</i>
-        <i>Get it on Google Play</i>
+        <i><img src="./images/badge-iphone.png"/></i>
+        <i><img src="./images/badge-android.png"/></i>
       </div>
     </div>
   </section>
-
-  <footer>
+  <footer class="container-footer">
     <ul>
-      <li></li>
-      
+      <li>About Us</li>
+      <li>Support</li>
+      <li>Blog</li>
+      <li>Press</li>
+      <li>API</li>
+      <li>Jobs</li>
+      <li>Privacy</li>
+      <li>Terms</li>   
     </ul>
   </footer>
  
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+  
+  
+  
+  
+  
+  
+  
+  
 
   &copy; 2014 Instagram
 </body>
