--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -12,7 +12,7 @@
       <div class="container-button">
         <button class="boton"><img src="./images/home.png"/>Log in</button>
       </div>
-
+      <div><img class="telefonos" src="./images/phones.png"/> </div>
       
     </div>
   </section>
@@ -32,7 +32,7 @@
     </div>
   </section>
   <footer class="container-footer">
-    <ul>
+    <ul class="lista">
       <li>About Us</li>
       <li>Support</li>
       <li>Blog</li>
@@ -40,19 +40,9 @@
       <li>API</li>
       <li>Jobs</li>
       <li>Privacy</li>
-      <li>Terms</li>   
+      <li>Terms</li>
+      <li class="arroba">&copy; 2014 Instagram</li>
     </ul>
   </footer>
- 
-  
-  
-  
-  
-  
-  
-  
-  
-
-  &copy; 2014 Instagram
 </body>
 </html>
