--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" type="text/css" href="./css/main.css">
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <nav>
+    <img src="./images/brand.png" alt="Instagram">
+    <div id="logIn">
+      <img src="./images/home.png" alt="Home">
+      <a href="#" class="href">Log in</a>
+    </div>
+  </nav>
+  <section>
+    <img src="./images/phones.png" alt="Phones">
+    <h2>Capture and Share the World's Moments</h2>
+    <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+    <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+    <p>Oh yeah, did we mention it's free?</p>
+    <img src="./images/badge-iphone.png" alt="Download on the App Store">
+    <img src="./images/badge-android.png" alt="Get it on Google Play">
+    <ul>
+      <li>About Us</li>
+      <li>Support</li>
+      <li>Blog</li>
+      <li>Press</li>
+      <li>API</li>
+      <li>Jobs</li>
+      <li>Privacy</li>
+      <li>Terms</li>
+      <li id="copyright">&copy; 2014 Instagram</li>
+    </ul>
+  </section>
 </body>
 </html>
