Me faltan cosas

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="./css/main.css">
   <title>Instagram</title>
 </head>
-<body>
-  Instagram
+<body class="background">
+    </div>
+    <div class="telefonos">
+    <img src="../starter-code/images/phones.png" alt="telefonos">
+    </div>
+  <div class="main">
+      <div class="top">
+        <img src="../starter-code/images/brand.png" alt="Instagram name"> 
+      
+        <button class="button">
+          <img src="../starter-code/images/home.png" alt= "Home Logo"> Log In
+        </button>
+    <div class="sub-main">  
+      <div class="contenido">  
+        <h2>Capture and Share<br> the World's Moments</h2>
 
-  Capture and Share the World's Moments
+        Instagram is a fast, beautiful and fun way to share your life with friends and family.<br>
+        <br>
+        Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br>
+        <br>
+        Oh yeah, did we mention it's free?
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+        Download on the App Store
+        Get it on Google Play<br>
+        <br>  
+        <img src="../starter-code/images/badge-iphone.png" alt="App Store"> <img src="../starter-code/images/badge-android.png" alt="Google Play"><br><br>
+      </div>
+    </div>
+  </div>
+    <div class="bar">
+      <a href="#">About Us  </a>
+      <a href="#">Support  </a>
+      <a href="#">Blog  </a>
+      <a href="#">Press  </a>
+      <a href="#">API  </a>
+      <a href="#">Jobs  </a>
+      <a href="#">Privacy  </a>
+      <a href="#">Terms  </a>
+    &copy; 2014 Instagram
+    </div>
+  
 </body>
 </html>
