done excepto el botón

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="utf-8">
+  <link rel="stylesheet" href="./css/main.css">
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
+  <div class="bluediv"></div>
+  <div class="whitediv">
+    <img class="main-content phones-img" src="./images/phones.png" alt="phones">
+    <div class="main-content right-content">
+      <img class="main-content" src="./images/brand.png" alt="Instagram logo">
+    <div class="main-content login">
+      <a href="#">
+      <img class="main-content" src="./images/home.png" alt="home">
+      <p class="main-content">Log in</p></a>
+    </div>
+      <img class="frame" src="./images/frame.png" alt="frame">
+    <div class="main-text">  
+      <h1>Capture and Share<br>the World's Moments</h1>
 
-  Capture and Share the World's Moments
+      <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.<br><br>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+      Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br><br>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+      Oh yeah, did we mention it's free?</p>
+    </div>
+      <img class="download" src="./images/badge-iphone.png" alt="Download iPhone">
+      <img class="download" src="./images/badge-android.png" alt="Download Android">
+    </div>
+  </div>
+  <footer>
+    <ul class="whole-list">
+      <li class="inline-list">ABOUT US</li>
+      <li class="inline-list">SUPPORT</li>
+      <li class="inline-list">BLOG</li>
+      <li class="inline-list">PRESS</li>
+      <li class="inline-list">API</li>
+      <li class="inline-list">JOBS</li>
+      <li class="inline-list">PRIVACY</li>
+      <li class="inline-list">TERMS</li>
+      <li class="inline-list copyright">&copy; 2014 INSTAGRAM</li>
+    </ul>
+  </footer>
 </body>
 </html>
