--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -44,6 +44,7 @@
                     <li class="informacion">Blog</li>
                     <li class="informacion">Press</li>
                     <li class="informacion">Api</li>
+                    <li class="informacion">Jobs</li>
                     <li class="informacion">Privacy</li>
                     <li class="informacion">Terms</li>
                     <li class="informacion">&copy; 2014 Instagram</li>
