--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="C:\Users\SAMSUNG\Documents\Mariana\IH\lab-css-instagram-clone\starter-code\css\main.css">
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <section class="azul">
+      <a href='#'class="link-btn"><b>Log in</b> 
+        </a>
+      <img id="frame" src="C:\Users\SAMSUNG\Documents\Mariana\IH\lab-css-instagram-clone\starter-code\images\frame.png" alt="frame">
+      <img id="appStore"src="C:\Users\SAMSUNG\Documents\Mariana\IH\lab-css-instagram-clone\starter-code\images\badge-iphone.png" alt="appstore">
+      <img id="googlePlay"src="C:\Users\SAMSUNG\Documents\Mariana\IH\lab-css-instagram-clone\starter-code\images\badge-android.png" alt="googlePlay">
+      <img id="home" src="C:\Users\SAMSUNG\Documents\Mariana\IH\lab-css-instagram-clone\starter-code\images\home.png" alt="home">
+      <h2>
+          Capture and Share <br> the World's Moments <br> <br>
+      </h2>
+      <img id="phones" src="C:\Users\SAMSUNG\Documents\Mariana\IH\lab-css-instagram-clone\starter-code\images\phones.png" alt="phones">
+      <img id="instagram" src="C:\Users\SAMSUNG\Documents\Mariana\IH\lab-css-instagram-clone\starter-code\images\brand.png" alt="instagram">
+      <p>
+          Instagram is a fast, beautiful and fun way to share your life 
+          <br> with friends and family.
+          <br> Take a picture or video, choose a filter to transform its look
+          <br> and feel, then post to Instagram &mdash; it's that easy. You can
+          <br> even share to Facebook, Twitter, Tumblr and more. It's a
+          <br> new way to see the world.
+          <br> Oh yeah, did we mention it's free?
+      </p>
+  
+    </section>
+  <footer>
+    <ul>
+      <li class="nav-bar-li"> <a href='#'class="nav-bar-item">AboutUs</a> </li>
+      <li class="nav-bar-li"> <a href='#'class="nav-bar-item">Support</a> </li>
+      <li class="nav-bar-li"> <a href='#'class="nav-bar-item">Blog</a> </li>
+      <li class="nav-bar-li"> <a href='#'class="nav-bar-item">Press</a> </li>
+      <li class="nav-bar-li"> <a href='#'class="nav-bar-item">API</a> </li>
+      <li class="nav-bar-li"> <a href='#'class="nav-bar-item">Jobs</a> </li>
+      <li class="nav-bar-li"> <a href='#'class="nav-bar-item">Privacy</a> </li>
+      <li class="nav-bar-li"> <a href='#'class="nav-bar-item">Terms</a> </li>
+    </ul>
+    &copy; 2014 Instagram
+  </footer>
 </body>
 </html>
