no pude hacer que la seccion uno se viera el background en solo la parte superior. los hipervinculos me salen distintos a los esperados, no se si sea por la fuente o esta ''

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,53 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-  Instagram
+  <img class="telefonos" src="./images/phones.png" alt="telefonos">
 
-  Capture and Share the World's Moments
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <section>
+      <img class="logo"  src="./images/brand.png" alt="logo Instagram"> 
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  </section>
 
-  Oh yeah, did we mention it's free?
+  <div class="sectionThree">
+    <img src="./images/frame.png" alt="fondo"> 
+    <div class="text"> 
+        <h1 class="h1"><b> Capture and Share<br> the World's Moments</b></h1>
 
-  Download on the App Store
-  Get it on Google Play
+        <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.<br></p>
+      
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br></p>
+      
+        <p>Oh yeah, did we mention it's free?</p>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+    </div>
 
+  </div>
+  
+
+<section>
+  <img class="download" src="./images/badge-iphone.png" alt="Download on the App Store">
+  <img class="get-it" src="./images/badge-android.png" alt="Get it on Google Play">
+  
+  
+</section>
+
+<section class="sectionFour"> 
+  <a>About Us</a>
+  <a>Support</a>
+  <a>Blog</a>
+  <a>Press</a>
+  <a>API</a>
+  <a>Jobs</a>
+  <a>Privacy</a>
+  <a>Terms</a>
+  <div class="copy">
   &copy; 2014 Instagram
+  </div>
+</section>
+
 </body>
 </html>
