Listo no concluido:(

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css">
+     
+
 </head>
 <body>
-  Instagram
+    <header class="fondo">
+    <img src="images/phones.png" class="phones" alt="phones" >
+    <img src="images/brand.png" class="brand" alt="brand" align="middle">
+ <div>
+   <img src="images/frame.png" class="frame" alt="FRAME" align="middle">
+    <h5>Capture and Share </br>
+         the World's Moments</h5>
 
-  Capture and Share the World's Moments
+  <h3>
+   
+    <p>
+  
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Oh yeah, did we mention it's free?
+  <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Download on the App Store
-  Get it on Google Play
+  <p>Oh yeah, did we mention it's free?</p>
+</h3>
+  <h4>Download on the App Store
+  Get it on Google Play</h4>
+</div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+  <footer>
 
-  &copy; 2014 Instagram
+      
+
+<h1 style="text-align:center" >
+
+<img src="images/badge-android.png" class="android" alt="android">
+      <img src="images/badge-iphone.png" class="iphone" alt="iphone">
+</h1>
+
+<h2 style="text-align:center">
+      <a href="https://www.instagram.com/aboutus#">About us</a>
+      <a href="https://www.instagram.com/support#">Support</a>
+      <a href="https://www.instagram.com/Blog#">Blog</a>
+      <a href="https://www.instagram.com/Press#">Press</a>
+      <a href="https://www.instagram.com/Jobs#">Jobs</a>
+      <a href="https://www.instagram.com/Privacy#">Privacy</a>
+      <a href="https://www.instagram.com/Terms#">Terms</a> 
+ 
+  &copy; 2014 Instagram  </h2>      
+    </footer>
+
 </body>
 </html>
