porfin creo que lo pude subir

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,12 +1,50 @@
 <!DOCTYPE html>
+
 <html lang="en">
+
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="./css/main.css">
 </head>
-<body>
-  Instagram
 
-  Capture and Share the World's Moments
+<body>
+
+<section>
+
+  <div>
+    <img class="azulito" src=".images/bgtile.png"/>
+    <img class= "logos" src="./images/brand.png"/>
+    <img class= "casita" src="./images/home.png"/>  
+  </div>
+  
+</section>
+
+<section>
+  <div>
+    <img class= "telefono" src="./images/phones.png"/>
+    <img class= "difuminado" src="images/frame.png"/>
+    <p class="tituloTex"> Capture and Share the World's Moments </p>
+  </div>
+</section>
+
+
+
+<section>
+<div class="things">
+  <p class="About Us">About Us</p>
+  <p class="Support">Support</p>
+  <p class="Blog">Blog</p>
+  <p class="Press">Press</p>
+  <p class="API">API</p>
+  <p class="Jobs">Jobs</p>
+  <p class="Privacy">Privacy</p>
+  <p class="Terms">Terms</p>
+</div>
+</section>
+
+
+
+  Instagram
 
   Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
@@ -17,14 +55,6 @@
   Download on the App Store
   Get it on Google Play
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
 
   &copy; 2014 Instagram
 </body>
